# healthcare-cicd-phase5

./: Makefile  PRODUCTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
data/sample/: provider_panel_risk_scored_sample.csv
reports/: snapshot.json
scripts/: run_snapshot.sh  run_validate.sh
src/healthcare_cicd_phase5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/healthcare_signals/: config.py  snapshot.py  validate_contract.py
tests/: test_contract.py  test_snapshot_regression.py
