[project]
name = "healthcare-cicd-phase5"
version = "0.1.0"
description = "Phase 5: CI/CD discipline for Healthcare Signals provider risk analytics"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
